contrib/setup_cluster/test/test_output/TC38/logs.out
File:install_util.c Function:query_execute L:150 Msg:GRANT CREATE ON DATABASE pgspider TO ; failed :ERROR:  syntax error at or near ";"
LINE 1: GRANT CREATE ON DATABASE pgspider TO ;
                                             ^

Config directory: ./
Node information file: node_information.json
Node structure file: node_structure.json
Timeout: 0
Node schema: public
Node on conflict: none
free db2
